repos/emily-python/contents/test/exec/fail/localPackage/includeMe.em
# NOT A TEST-- IS LOADED BY: IMPORTSTAR.EM
# Maybe this isn't the best place to store this

let x = 104
export e = 103
export method f = x

x = 105
